2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_img_convert):
	Replace usage of img_convert (deprecated) by sws_scale.
	Fixes #529015

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	Fix doc-building and make dist.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/ext/Makefile.am:
	Don't copy file which is no longer present.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegaudioresample.c:
	(gst_ffmpegaudioresample_class_init),
	(gst_ffmpegaudioresample_init),
	(gst_ffmpegaudioresample_transform_caps),
	(gst_ffmpegaudioresample_transform_size),
	(gst_ffmpegaudioresample_get_unit_size),
	(gst_ffmpegaudioresample_set_caps),
	(gst_ffmpegaudioresample_transform):
	small gst-indent run.

2008-05-08  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/ext/Makefile.am:
	Use 'make clean' and not 'make dist-clean' for local cleanups.
	Fixes #519235

2008-05-07  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_setcaps),
	(gst_ffmpegdec_register):
	Previous commit in fact broke playback for standard wmv3.
	Instead make both ffdec_vc1 and ffdec_wmv3 accept any wmv3 variant and
	figure out the proper codecid when opening the ffmpeg decoder.

2008-05-07  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_setcaps),
	(gst_ffmpegdec_video_frame), (gst_ffmpegdec_register):
	Bump the priority of VC1 decoder so that it goes before the WMV3
	decoder. This allows proper auto-pluggin with decodebin/playbin.
	Fixes #531857

2008-05-06  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Gabriel Bouvigne  <bouvigne at mp3-tech dot org>
	* ext/libpostproc/gstpostproc.c:
	Support for non-I420 colorspaces in postproc
	Fixes #496127

2008-04-21  Edward Hervey  <edward@collabora.co.uk>

	Patch by: Dejan Sakelšak <sakdean at gmail dot com>