@@ -11,7 +11,7 @@
 SUBDIRS = 
 DIST_SUBDIRS = ffmpeg
 TMP_DIST_DIR=ffmpeg-dist
-DIST_DIR=$(TMP_DIST_DIR)/.ffmpeg
+DIST_DIR=$(TMP_DIST_DIR)/.ffmpeg/
 
 all-local:
 	cd ffmpeg && $(MAKE)
@@ -22,12 +22,14 @@ clean-local:
 dist-clean:
 	rm -rf $(TMP_DIST_DIR) 
 
+distclean: dist-clean
+
 dist-local: dist-clean
 	svn -r $(FFMPEG_REVISION) co $(FFMPEG_SVN) $(TMP_DIST_DIR)
 	mkdir $(DIST_DIR)
 	pwd
 	cp $(TMP_DIST_DIR)/*.c $(TMP_DIST_DIR)/*.h $(TMP_DIST_DIR)/Makefile $(TMP_DIST_DIR)/configure $(TMP_DIST_DIR)/version.sh $(DIST_DIR) 
-	cp $(TMP_DIST_DIR)/common.mak $(TMP_DIST_DIR)/Changelog $(TMP_DIST_DIR)/COPYING.* $(TMP_DIST_DIR)/INSTALL $(DIST_DIR)
+	cp $(TMP_DIST_DIR)/*.mak $(TMP_DIST_DIR)/Changelog $(TMP_DIST_DIR)/COPYING.* $(TMP_DIST_DIR)/INSTALL $(DIST_DIR)
 	cp $(TMP_DIST_DIR)/Doxyfile $(TMP_DIST_DIR)/CREDITS $(TMP_DIST_DIR)/MAINTAINERS $(DIST_DIR)
 	@for d in `cd $(TMP_DIST_DIR) && ls -d */`; \
 		do mkdir $(DIST_DIR)/$$d; \
@@ -41,6 +43,7 @@ dist-local: dist-clean
 	done 
 	rm -rf ffmpeg
 	mv $(DIST_DIR) ffmpeg
+	touch ffmpeg/config.mak
 	echo "Patching ffmpeg ./configure"
 	sed -e '/Unknown option/ {N;N;s/exit 1//; }' ffmpeg/configure > ffmpeg/configure.tmp
 	mv ffmpeg/configure.tmp ffmpeg/configure
